--- a/src/pages/Home/SideMenu/index.scss
+++ b/src/pages/Home/SideMenu/index.scss
@@ -1,5 +1,5 @@
 .background-menu {
-  background: black;
+  background: #00002f;
   max-width: 250px;
   min-width: 250px;
   height: 100vh;
@@ -42,6 +42,7 @@
   &--label {
     transition: all 0.3s;
     opacity: 1;
+    color: white;
 
     &--onlyIcon {
       //display: none;
