finalizando ajustes de resposividade

--- a/src/pages/MainPage/ContentMenu/index.scss
+++ b/src/pages/MainPage/ContentMenu/index.scss
@@ -1,7 +1,5 @@
-.background-menu {
+.background-content-menu {
   background: #00002f;
-  max-width: 250px;
-  min-width: 250px;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -12,15 +10,19 @@
     max-width: 70px;
     min-width: 70px;
   }
+
+  @media (min-width: 430px) {
+    display: none;
+  }
 }
 
-#menu {
+#content-menu {
   .nextui-c-bDGMeb-hjqCeZ-cv {
     margin-right: 0px;
   }
 }
 
-.buttons-menu {
+.buttons-content-menu {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -52,7 +54,7 @@
   }
 }
 
-.button-close-menu {
+.button-close-content-menu {
   margin: 10px;
   width: auto;
 }
